--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 .flex{
     display: flex;
@@ -32,6 +33,17 @@ nav{
 .about-parallax {
     /* The image used */
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/bwNhaTrangOne.png') center/cover no-repeat;
+    /* Set a specific height */
+    min-height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.faq-parallax{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nhatrangOutside.png') center/cover no-repeat;
     /* Set a specific height */
     min-height: 500px;
   
@@ -124,6 +136,16 @@ li a{
     text-align: center;
     text-transform: uppercase;
 }
+
+.buffer{
+    height: 200px;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* .Landing_Page_Content{
     display: flex;
     flex-direction: column;
@@ -213,7 +235,7 @@ li a{
     align-items: center;
     padding-bottom: 50px;
     margin: auto;
-    width: 80%;
+    /* width: 80%; */
     gap: 10px;
 }
 .Popular_Dishes_Content h1{
@@ -324,7 +346,7 @@ li a{
 
 .Instagram{
     background-color: var(--lightColor);
-    width: 80%;
+    /* width: 80%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -377,7 +399,7 @@ li a{
 .Location{
     color: var(--lightColor);
     background-color: var(--darkBlue);
-    width: 80%;
+    /* width: 80%; */
     margin: auto;
     font-family: 'Roboto Slab';
     display: flex;
@@ -451,6 +473,9 @@ li a{
     align-items: center;
     text-align: center;
     text-transform: uppercase;
+}
+.Location, .Instagram, .Popular_Dishes_Content{ /* gap for index.html cards */
+    width: 75%;
 }
 
 .directions{
@@ -526,6 +551,52 @@ li a{
 .top-button img{
     width: 100px;
 
+}
+
+.home{
+    position: relative;
+    background-color: black;
+    z-index: 0;
+    width: 100%;
+    height: 95vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.home h2{
+    color: white;
+    /* position: absolute; */
+    font-size: 100px;
+    text-align: center;
+    z-index: 3;
+    color: var(--lightColor);
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 150px;
+    text-transform: uppercase;
+}  
+.home img{
+    z-index: 2;
+    position: absolute;
+    filter: brightness(40%);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: opacity 1s ease;
+}
+.home img.active{
+    opacity: 1;
+}
+.slider-nav{
+    z-index: 8;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .menu-buttons{
     font-family: 'Oswald', sans-serif;
@@ -668,7 +739,9 @@ li a{
 
 /* FAQ */
 .faq{
-    margin: 30px 20vw;
+    margin: 50px 20vw;
+    padding: 30px;
+    background-color: var(--darkBlue);
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -727,12 +800,26 @@ li a{
     transition: height 0.3s ease-out;
 }
 footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    place-items: top;
+    text-align: center;
+    background-color: var(--darkBlue);
+    color: white;
+    font-family: 'Oswald', sans-serif;
+
+    
 }
-footer ul{
-    margin-bottom: 0;
+.footer-section{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.footer-section p{
+    margin-bottom: 10px;
+}
+.footer-section img{
+    height: auto;
+    width: 100px; 
 }
 
 
