--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav{
     flex-direction: column;
     gap: 100px;
 }
-.about-parallax {
+.menu-parallax {
     /* The image used */
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/bwNhaTrangOne.png') center/cover no-repeat;
     /* Set a specific height */
@@ -42,8 +42,20 @@ nav{
     background-repeat: no-repeat;
     background-size: cover;
 }
+.about-parallax {
+    /* The image used */
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/food.png') center/cover no-repeat;
+    /* Set a specific height */
+    min-height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .faq-parallax{
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nhatrangOutside.png') center/cover no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nhatranginside2.jpg') center/cover no-repeat;
     /* Set a specific height */
     min-height: 500px;
   
@@ -140,6 +152,7 @@ li a{
 .buffer{
     height: 200px;
     background-color: black;
+    filter: brightness(40%);
     color: white;
     display: flex;
     align-items: center;
@@ -168,7 +181,7 @@ li a{
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 90vh!important;
+    height: 95vh!important;
     /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat; */
     height: 95vh;
     gap: 45px;
