--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@
     --lightestGrey:#717070;
 }
 
-
 nav{
     background-color: white;
     width: 100%;
@@ -174,6 +173,7 @@ li a{
     font-size: 16px;
     font-family: 'Rubik';
     font-style: normal;
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
     font-weight: 700;
     line-height: 100%;
     align-items: center;
@@ -274,6 +274,7 @@ li a{
     font-size: 1.25rem;
     line-height: 100%;
     /* or 30px */
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
     align-items: center;
     text-align: center;
     text-transform: uppercase;
@@ -405,6 +406,7 @@ grid-template-columns: repeat(3, 1fr);
     align-items: center;
     text-align: center;
     text-transform: uppercase;
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
 }
 
 .Instagram{
@@ -416,6 +418,7 @@ grid-template-columns: repeat(3, 1fr);
     align-items: center;
     margin: auto;
     padding-bottom: 15px;
+    box-shadow: 0px 4px 10px 0px rgb(0, 0, 0, 0.25);
 }
 .Instagram_Handle{
     display: flex; 
@@ -450,10 +453,12 @@ grid-template-columns: repeat(3, 1fr);
     place-items: center;
     padding: 0px 5px;
     gap: 20px 20px;
+    
 }
 .photos img{
     width: 325px;
     height: auto;
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
 }
 
 
@@ -618,10 +623,12 @@ grid-template-columns: repeat(3, 1fr);
     right: 2.5rem;
     z-index: 2;
 }
+  
 .top-button img{
     width: 100px;
-
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
 }
+
 
 .home{
     position: relative;
@@ -676,7 +683,7 @@ grid-template-columns: repeat(3, 1fr);
     background-color: var(--lightRed);
     width: 25px;
     height: 25px;
-    box-shadow: 1px 1px;
+    box-shadow: 0px 2px 8px 0px rgb(0, 0, 0, 0.5);
     border-radius: 20px;
     z-index: 99;
     cursor: pointer;
@@ -689,6 +696,7 @@ grid-template-columns: repeat(3, 1fr);
 }
 .carousel-indicator:hover{
     background-color:var(--lightestGrey);
+    transition: background-color 0.25s ease;
 }
 .menu-buttons{
     font-family: 'Oswald', sans-serif;
@@ -707,6 +715,7 @@ grid-template-columns: repeat(3, 1fr);
     padding-top: 30px;
     padding-bottom: 30px;
     gap: 20px;
+
 }
 .hide{
     display: none;
@@ -734,16 +743,20 @@ grid-template-columns: repeat(3, 1fr);
     box-shadow: 2px 2px;
     cursor: pointer;
     transition: background-color .1s;
+    box-shadow: 0px 2px 10px 0px rgb(0, 0, 0, 0.33);
 }
 
 /*hover style*/
 .menu-buttons a:hover{
     background-color: var(--lightestGrey);
+    transition: background-color 0.5s ease-out;
 }
 
 .select{
     background-color: var(--primaryRed)!important;
+    transition: background-color 0.5s ease-out;
     color: white!important;
+    
 }
 .drinks-content{
     display: none;
@@ -849,6 +862,9 @@ grid-template-columns: repeat(3, 1fr);
     align-items: center;
     color: white;
     font-weight: 600;
+    font-size: 16px;
+    letter-spacing: .033rem;
+
 }
 
 .faq h1{
@@ -874,11 +890,12 @@ grid-template-columns: repeat(3, 1fr);
 }
 .faq-item{
     background-color: var(--lightRed);
+    box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.25);
 }
 .answer {
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 16px;
     color: black;
     /* display: none; */
     padding: 0;
